<resources>
    <string name="app_name">Pro3</string>
    <string name="app_website_link">pro3.kz</string>

    <string name="title_activity_register">Зарегистрироваться</string>
    <string name="title_activity_login">Войти</string>
    <string name="title_activity_create_account">Регистрация</string>
    <string name="title_activity_restore_password">Восстановление Пароля</string>
    <string name="title_activity_car_wash_details">Выбранная Автомойка</string>
    <string name="title_activity_order_details">Выбранный Заказ</string>
    <string name="title_activity_location_on_map">Адрес на Карте</string>

    <string name="title_main_fragment_account">Мой Аккаунт</string>
    <string name="title_main_fragment_all_stations">Все Автомойки</string>
    <string name="title_main_fragment_all_stations_toolbar">Автомойки:\u0020</string>
    <string name="title_main_fragment_favorite_stations">Мои Автомойки</string>
    <string name="title_main_fragment_user_orders">Мои Заказы</string>
    <string name="title_main_fragment_contacts">Контакты</string>
    <string name="title_main_fragment_about_project">О Проекте</string>
    <string name="title_main_fragment_logout">Выйти</string>

    <string name="hint_new_phone_number">Номер телефона: (XXX) XXX-XX-XX</string>
    <string name="hint_phone_number">(XXX) XXX-XX-XX</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_new_user_name">Ваше Имя</string>
    <string name="hint_confirm_password">Подтвердите пароль</string>
    <string name="hint_city">город</string>
    <string name="hint_car_type">авто</string>

    <string name="text_register">Зарегистрироваться</string>
    <string name="text_login"><u>Войти</u></string>
    <string name="text_forgot_password">Забыли?</string>
    <string name="text_create_account">Создать Аккаунт</string>
    <string name="text_choose_city">Ваш Город:</string>
    <string name="text_choose_car_type">Тип Вашего Авто:</string>
    <string name="text_no_favorite_car_washes">Список избранных автомоек пуст</string>
    <string name="text_no_my_orders">У Вас еще нет заказов</string>
    <string name="text_no_time_slots_for_today">На сегодня больше не возможно забронировать</string>
    <string name="text_no_time_slots_for_tomorrow">На завтра бронировать пока что не возможно</string>
    <string name="text_word_or">или</string>
    <string name="text_show_in_map"><u>Показать на Карте</u></string>
    <string name="text_30_minutes">30 мин</string>
    <string name="text_60_minutes">60 мин</string>
    <string name="text_0_tenge">0 тг</string>
    <string name="text_0_minutes">0 мин</string>

    <string name="navigation_drawer_open">Открыть Меню</string>
    <string name="navigation_drawer_close">Закрыть Меню</string>

    <string name="error_phone_number_format">Неверный Формат Номера Телефона</string>
    <string name="error_choose_car">Выберите Ваш тип машины</string>
    <string name="error_choose_city">Выберите Ваш город</string>
    <string name="error_passwords_do_not_match">Введенные пароли не совпадают</string>
    <string name="error_enter_password">Введите пароль</string>
    <string name="error_enter_name">Введите Ваше Имя</string>
    <string name="error_no_internet_connection">Нет доступа к Интернету</string>
    <string name="error_could_not_load_data">Не удалось загрузить данные</string>
    <string name="error_could_not_create_user">Не удалось создать пользователя</string>
    <string name="error_wrong_phone_or_pass">Неверный Логин или Пароль</string>
    <string name="error_could_not_make_favorite">Не удалось Добавить в Избранные</string>
    <string name="error_could_not_cancel_favorite">Не удалось Удалить из Избранные</string>

    <string name="success_car_wash_added_to_favorites">Добавлено в Избранные</string>
    <string name="success_car_wash_deleted_from_favorites">Удалено из Избранных</string>

    <string name="server_response_ok">OK\u0020</string>
    <string name="server_response_created">Created\u0020</string>
    <string name="server_response_unauthorized">Unauthorized\u0020</string>

    <string name="dialog_choose_city">Выберите Город</string>
    <string name="dialog_choose_car_type">Выберите Тип Авто</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel_1">ОТМЕНА</string>

    <string name="dialog_button_today">Сегодня</string>
    <string name="dialog_button_tomorrow">Завтра</string>
    <string name="dialog_button_cancel_2">Отмена</string>
    <string name="dialog_button_book">Забронировать</string>

    <string name="dialog_text_adding_to_favorites">Добавляю в Избранные</string>
    <string name="dialog_text_deleting_from_favorites">Удаляю в Избранные</string>

    <string name="menu_make_favorite">Добавить в Избранные</string>
    <string name="menu_cancel_favorite">Удалить из Избранные</string>
</resources>
