<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_36dp"
            android:title="@string/title_main_fragment_account" />
        <item
            android:id="@+id/nav_car_washers"
            android:icon="@drawable/ic_local_car_wash_black_36dp"
            android:title="@string/title_main_fragment_all_stations" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_stars_black_36dp"
            android:title="@string/title_main_fragment_favorite_stations" />
        <item
            android:id="@+id/nav_user_orders"
            android:icon="@drawable/ic_attach_money_black_36dp"
            android:title="@string/title_main_fragment_user_orders" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts_black_36dp"
            android:title="@string/title_main_fragment_contacts" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_black_36dp"
            android:title="@string/title_main_fragment_about_project" />
    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_logout_black_36dp"
            android:title="@string/title_main_fragment_logout" />
    </group>

</menu>
