<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createAccountActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    android:descendantFocusability="beforeDescendants"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.marat.apps.android.pro3.Activities.CreateAccountActivity"
    tools:showIn="@layout/activity_create_account">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/createAccountUserNameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/hint_new_user_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLength="40"
            android:textSize="14sp"/>

        <com.marat.apps.android.pro3.Models.PhoneNumberEditText
            android:id="@+id/createAccountPhoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/createAccountUserNameEditText"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/editbox_background_normal"
            android:digits="0123456789+"
            android:hint="@string/hint_new_phone_number"
            android:inputType="phone"
            android:maxLength="15"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/createAccountPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/createAccountPhoneNumberEditText"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/hint_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/createAccountPasswordEditText2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/createAccountPasswordEditText"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/hint_confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textSize="14sp"/>

        <LinearLayout
            android:id="@+id/createAccountCityAndCarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/createAccountPasswordEditText2"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/createAccountCityTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/createAccountCityEditText"
                    android:layout_alignStart="@+id/createAccountCityEditText"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/text_choose_city"
                    android:textColor="@android:color/white"/>

                <EditText
                    android:id="@+id/createAccountCityEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/createAccountCityTextView"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="6dp"
                    android:background="@android:drawable/editbox_background_normal"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/hint_city"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/createAccountCarTypeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/createAccountCarTypeEditText"
                    android:layout_alignStart="@+id/createAccountCarTypeEditText"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/text_choose_car_type"
                    android:textColor="@android:color/white"/>

                <EditText
                    android:id="@+id/createAccountCarTypeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/createAccountCarTypeTextView"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="6dp"
                    android:background="@android:drawable/editbox_background_normal"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/hint_car_type"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:textSize="14sp"/>

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/createAccountCityAndCarLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorButtonBackground"
            android:onClick="registerUser"
            android:text="@string/text_create_account"
            android:textColor="@android:color/white"/>

    </RelativeLayout>

</ScrollView>
