<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logInActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.marat.apps.android.pro3.Activities.LoginActivity"
    tools:showIn="@layout/activity_login">

    <com.marat.apps.android.pro3.Models.PhoneNumberEditText
        android:id="@+id/logInPhoneNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/logInPasswordEditText"
        android:background="@android:drawable/editbox_background_normal"
        android:digits="0123456789+"
        android:hint="@string/hint_new_phone_number"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="15"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/logInPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/hint_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/logInPasswordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/colorButtonBackground"
        android:onClick="logInUser"
        android:text="@string/text_login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/logInPasswordEditText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:onClick="goToRestorePasswordActivity"
        android:text="@string/text_forgot_password" />

</RelativeLayout>
