<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.marat.apps.android.pro3.Activities.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <TextView
        android:id="@+id/centerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <com.marat.apps.android.pro3.Models.PhoneNumberEditText
        android:id="@+id/registerPhoneNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/centerTextView"
        android:background="@android:drawable/editbox_background_normal"
        android:digits="0123456789+"
        android:hint="@string/hint_new_phone_number"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:maxLength="15"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/centerTextView"
        android:layout_centerHorizontal="true"
        android:background="@color/colorButtonBackground"
        android:onClick="goToCreateAccountActivity"
        android:text="@string/text_register"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_toLeftOf="@+id/LogInTextView"
        android:layout_toStartOf="@+id/LogInTextView"
        android:text="@string/text_word_or"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/LogInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="goToLogInActivity"
        android:paddingBottom="16dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="16dp"
        android:text="@string/text_login"
        android:textColor="@android:color/white"
        android:textSize="16.5sp"/>

</RelativeLayout>
