<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/dialogTimetableLoadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/dialogTimetableChooseTimeContainerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/dialogTimetableTodayTomorrowLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_timetable_buttons_2"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <RelativeLayout
                android:id="@+id/dialogTimetableTodayTextViewLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/dialogTimetableTodayTimeTextView"
                    android:layout_width="80dp"
                    android:layout_height="22dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/dialog_button_today"
                    android:textColor="@color/colorPrimary"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/dialogTimetableTomorrowTextViewLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/dialogTimetableTomorrowTimeTextView"
                    android:layout_width="70dp"
                    android:layout_height="22dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/dialog_button_tomorrow"
                    android:textColor="@color/colorPrimary"/>

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/dialogTimetableContainerLayout"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:layout_below="@+id/dialogTimetableTodayTomorrowLayout"
            android:layout_centerHorizontal="true">

            <ListView
                android:id="@+id/dialogTimetableListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:clipToPadding="false"
                android:listSelector="@android:color/transparent"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/dialogTimetableErrorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:text="@string/error_could_not_load_data"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/dialogTimetableEmptyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:text="@string/text_no_time_slots_for_today"
                android:visibility="gone"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialogTimetableContainerLayout"
            android:background="@drawable/bg_timetable_buttons"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialogTimetableCancelRegistrationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/dialog_button_cancel_2"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/dialogTimetableRegisterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/dialog_button_book"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>